# muffin-redis

./: .bumpversion.cfg  .coveragerc  .git-commits.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  git-conventional-commits.yaml  muffin_redis.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
muffin_redis/: __init__.py
requirements/: requirements-tests.txt  requirements.txt
