[tool.poetry]
name = "muffin-redis"
version = "3.7.1"
description = "Redis support for Muffin framework."
readme = "README.rst"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
homepage = "https://github.com/klen/muffin-redis"
repository = "https://github.com/klen/muffin-redis"
keywords = ["redis", "muffin", "asgi", "asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Framework :: AsyncIO",
]


[tool.poetry.dependencies]
python = "^3.8"
muffin = "^0"
redis = "*"

# Optional dependencies
redislite = { version = "*", optional = true }

[tool.poetry.extras]
redislite = ["redislite"]

[tool.poetry.group.dev.dependencies]
ipdb = "*"
ruff = "*"
black = "*"
pytest = "*"
pre-commit = "*"
pytest-aio = "*"
pytest-mypy = "*"

[tool.pytest.ini_options]
log_cli = true
addopts = "-lxsv"

[tool.mypy]
packages = ["muffin_redis"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py38"
exclude = [".venv", "docs", "examples"]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
]

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
