[tool.poetry]
name = "muffin-redis"
version = "3.9.1"
description = "Redis support for Muffin framework."
readme = "README.md"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
homepage = "https://github.com/klen/muffin-redis"
repository = "https://github.com/klen/muffin-redis"
keywords = ["redis", "muffin", "asgi", "asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: AsyncIO",
]


[tool.poetry.dependencies]
python = "^3.10"
muffin = "*"
redis = "*"

# Optional dependencies
redislite = { version = "*", optional = true }

[tool.poetry.extras]
redislite = ["redislite"]

[tool.poetry.group.dev.dependencies]
ipdb = "*"
ruff = "*"
black = "*"
pytest = "*"
pre-commit = "*"
pytest-aio = "*"
pytest-mypy = "*"

[tool.pytest.ini_options]
log_cli = true
addopts = "-lxsv"
filterwarnings = "ignore::UserWarning:redislite.*"

[tool.mypy]
packages = ["muffin_redis"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310,py311,py312,py313,pypy310

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy310]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py310"
exclude = [".venv", "docs", "examples"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D",
  "UP",
  "ANN",
  "DJ",
  "EM",
  "RSE",
  "SLF",
  "RET",
  "S101",
  "PLR2004",
  "PLR0912",
  "N804",
  "A003",
  "TRY003",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
preview = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
