[wheel]
python-tag = py3

[metadata]
name = muffin-redis
version = attr: muffin_redis.__version__
url = https://github.com/klen/muffin-redis
description = Redis support for Muffin framework.
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = redis, muffin, asgi, asyncio
project_urls = 
    Documentation = https://github.com/klen/muffin-redis
    Source code = https://github.com/klen/muffin-redis
    Issue tracker = https://github.com/klen/muffin-redis/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: AsyncIO

[options]
packages = muffin_redis
include_package_data = True
python_requires = >= 3.7
install_requires = 
    muffin              >= 0.71
    aioredis

[options.extras_require]
fake =
    fakeredis
tests = 
    pytest
    pytest-aio
    pytest-mypy
    aioredis
    fakeredis
build = 
    bump2version

[pylama]
ignore=W0212,D211,D213,D401

[pylama:setup.py]
ignore=D

[pylama:tests.py]
ignore=D

[mypy]
ignore_missing_imports = True

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
